//! This file defines messages exchanged between Yamcs and Yamcs Gateway
//! At this moment it duplicates and cleans up the parameter value definitions from the yamcs-api proto files
//! Sometime in the future when we will afford a breaking change in the yamcs-api, we can unify the two
//!
syntax="proto2";

package yamcs.protobuf.ygw;

option java_package = "org.yamcs.ygw.protobuf";

import "pvalue.proto";


enum MessageType {
  NODE_INFO = 1;
  PARAMETER_DEFINITIONS = 2;
  COMMAND_DEFINITIOS = 3;
  TM = 4;
  TC = 5;
  EVENT = 6;
  PARAMETER_DATA = 7;
  LINK_COMMAND = 8;
  LINK_STATUS = 9;
}

message Timestamp {
	required sint64 millis = 1;
	required uint32 picos = 2;
}

// An aggregate value is an ordered list of (member name, member value).
// Two arrays are used in order to be able to send just the values (since
// the names will not change)
message AggregateValue {
   repeated string name = 1;
   repeated Value value = 2;
}

message EnumeratedValue {
    required sint64 sint64Value = 1;
    required string stringValue = 4;
}

message ArrayValue {
    repeated Value value = 1;
}

// Union type for storing a value
// this message should hopefully one day replace the one in the yamcs-api as it is cleaner
message Value {
    oneof v {
        float floatValue = 2;
        double doubleValue = 3;
        sint32 sint32Value = 4;
        uint32 uint32Value = 5;
        bytes binaryValue = 6;
        string stringValue = 7;
        Timestamp timestampValue = 8;
        uint64 uint64Value = 9;
        sint64 sint64Value = 10;
        bool booleanValue = 11;
        AggregateValue aggregateValue = 12;
        EnumeratedValue enumeratedValue = 13;
        ArrayValue arrayValue = 14;    
    };
}

message ParameterValue {
    // Parameter identifier
    optional string fqn = 1;

    // can be used instead of the id above in certain contexts
    optional uint32 numericId = 2;

    // Raw value (uncalibrated)
    optional Value rawValue = 3;

    // Engineering value (calibrated)
    optional Value engValue = 4;

    optional Timestamp acquisitionTime = 5;

    optional Timestamp generationTime = 6;

    optional yamcs.protobuf.pvalue.AcquisitionStatus acquisitionStatus = 7;
    
    optional yamcs.protobuf.pvalue.MonitoringResult monitoringResult = 8;
    optional yamcs.protobuf.pvalue.RangeCondition rangeCondition = 9;

    // How long (in milliseconds) this parameter value is valid
    optional int64 expireMillis = 10;
}


message ParameterData {
    repeated ParameterValue parameter = 1;

    // The next three fields are used by the recorder as unique key to store
    // parameters in "rows" and also by components that provide parameters
    // from external sources. The time should roughly correspond to the parameter 
    // time but can be rounded for better efficiency.
    required string group = 2;
    required uint32 seqNum = 4;

    optional Timestamp  generationTime = 3;
  
}

message CommandAssignment {
  required string name = 1;
  optional Value rawValue = 2;
  optional Value engValue = 3;
}

message CommandId {
  required int64 generationTime = 1;
  required string origin = 2;
  required int32 sequenceNumber = 3; //unique in relation to generationTime and origin
  optional string commandName = 4;
}

message PreparedCommand {
   required CommandId commandId = 1;
   repeated CommandAssignment assignments = 2;
   map<string, Value> extra = 3;
   optional bytes binary = 4;
}

enum EventSeverity {
    INFO = 0;
    WARNING = 1;
    ERROR = 2;

    //the levels below are compatible with XTCE
    // we left the 4 out since it could be used 
    // for warning if we ever decide to get rid of the old ones

    WATCH = 3;
    DISTRESS = 5;
    CRITICAL = 6;
    SEVERE = 7;
}
  
message Event {
    optional string source = 1;
    optional int64 generationTime = 2;
    optional int64 receptionTime = 3;
    optional int32 seqNumber = 4;
    optional string type = 5;
    required string message = 6;
    optional EventSeverity severity = 7[default=INFO];
  
    // Set by API when event was posted by a user
    optional string createdBy = 10;

    // Additional properties
    map<string, string> extra = 11;
}


//YGE nodes
message NodeList {
    repeated Node nodes = 1;
}

message Link {
    required uint32 id = 1;
    required string name = 2;
    optional string description = 3;
    optional bool tm = 4;
    optional bool tc = 5;
}

message Node {
    required uint32 id = 1;
    required string name = 2;
    optional string description = 3;
    optional bool tm = 4;
    optional bool tc = 5;
    repeated Link links = 6;
}

message ParameterDefinition {
    required string fqn = 1;
    optional string description = 2;
    optional string unit = 3;
    // type can be a fully qualified name of a type known inside Yamcs
    // or a basic value type sint32, uint32, etc in case it is a simple engineering only value
    required string type = 4;
    optional bool writable = 5;
}

message ParameterDefinitionList {
    repeated ParameterDefinition definitions = 1;
}
enum LinkState {
    OK = 1;
    UNAVAIL = 2;
    DISABLED = 3;
    FAILED = 4;
}

message LinkStatus {
    required LinkState state = 1;
    required uint64 dataInCount = 2;
    required uint64 dataOutCount = 3;
    required uint64 dataInSize = 4;
    required uint64 dataOutSize = 5;
}

message LinkCommand {
    required uint32 link_id = 1;
    required string command = 2;
    optional string args = 3;
}
